fix: ayout shifts

--- a/style.css
+++ b/style.css
@@ -184,12 +184,15 @@ h1 {
     width: 60%;
     max-height: 100%;
     border-radius: 10px;
+    aspect-ratio: 16 / 9;
+    
 }
 
 @media (max-width: 1024px) {
     #hero-image {
         width: 100%;
         height: 100%;
+        
     }
 }
 
